--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
     "react-router": "^7.9.5",
-    "react-router-dom": "^7.9.5"
+    "react-router-dom": "^7.9.5",
+    "sass": "^1.94.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
